--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="profile">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="upload" viewBox="0 0 16 16">
+          <svg xmlns="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F621848661045823286%2F&psig=AOvVaw1zKTNDH5mnFqMgWltS_SXa&ust=1664195816684000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCIDbkuT6r_oCFQAAAAAdAAAAABAD" fill="currentColor" class="upload" viewBox="0 0 16 16">
             <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
           </svg>
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="live" viewBox="0 0 16 16">
