--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       <div class="ui-row-1">
 
         <div class="logo-comp">
-          <div><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 297 297" xml:space="preserve">
+          <div>
+            <svg version="1.1" xmlns="https://www.svgrepo.com/show/288987/fire.svg" xmlns:xlink="https://www.svgrepo.com/show/288987/fire.svg" x="0px" y="0px" viewBox="0 0 297 297" xml:space="preserve">
               <g>
                 <path d="M48.523,73.196h18.131c5.597,0,10.137-4.536,10.137-10.134c0-5.6-4.54-10.137-10.137-10.137H48.523 c-5.599,0-10.137,4.537-10.137,10.137C38.387,68.66,42.925,73.196,48.523,73.196z" />
                 <path d="M47.628,123.657c0-5.598-4.54-10.137-10.137-10.137H19.357c-5.599,0-10.135,4.539-10.135,10.137 c0,5.597,4.536,10.135,10.135,10.135h18.134C43.088,133.792,47.628,129.254,47.628,123.657z" />
