--- a/index.html
+++ b/index.html
@@ -82,16 +82,40 @@
             </svg></div>
 
           <div>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Uploaded to svgrepo.com" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+              <style type="text/css">
+                .avocado_zestien{fill:#E598A3;}
+                .avocado_vijftien{fill:#D36781;}
+                .avocado_een{fill:#231F20;}
+                .st0{fill:#EAD13F;}
+                .st1{fill:#CC4121;}
+                .st2{fill:#FFFAEE;}
+                .st3{fill:#E0A838;}
+                .st4{fill:#D1712A;}
+                .st5{fill:#A3AEB5;}
+                .st6{fill:#788287;}
+                .st7{fill:#C3CC6A;}
+                .st8{fill:#6F9B45;}
+                .st9{fill:#248EBC;}
+                .st10{fill:#8D3E93;}
+                .st11{fill:#3D3935;}
+                .st12{fill:#716558;}
+                .st13{fill:#AF9480;}
+                .st14{fill:#DBD2C1;}
+                .st15{fill:#231F20;}
+              </style>
+              <g>
+                <path class="avocado_vijftien" d="M16,27.437C17.777,26.495,29.5,19.975,29.5,12c0-4.136-3.364-7.5-7.5-7.5   c-2.147,0-4.197,0.93-5.625,2.551L16,7.478l-0.375-0.426C14.197,5.43,12.147,4.5,10,4.5c-4.136,0-7.5,3.364-7.5,7.5   C2.5,19.975,14.223,26.495,16,27.437z"/>
+                <path class="avocado_een" d="M22,4c-2.393,0-4.534,1.056-6,2.721C14.534,5.056,12.393,4,10,4c-4.418,0-8,3.582-8,8   c0,9,14,16,14,16s14-7,14-16C30,7.582,26.418,4,22,4z M16,26.869C13.664,25.601,3,19.406,3,12c0-3.86,3.14-7,7-7   c2.003,0,3.917,0.868,5.25,2.382L16,8.234l0.75-0.852C18.083,5.868,19.997,5,22,5c3.86,0,7,3.14,7,7   C29,19.406,18.336,25.601,16,26.869z"/>
+                <g>
+                  <circle class="avocado_zestien" cx="8" cy="10" r="2"/>
+                </g>
+              </g>
+              </svg>
           </div>
 
           <div>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bookmarks-fill" viewBox="0 0 16 16">
-              <path d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4z" />
-              <path d="M4.268 1A2 2 0 0 1 6 0h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L13 13.768V2a1 1 0 0 0-1-1H4.268z" />
-            </svg>
+            <path xmlns="http://www.w3.org/2000/svg" style="fill:#FF8C8A;" d="M238.848,142.991c-13.605-16.34-34.099-26.745-57.027-26.745c-40.967,0-74.177,33.213-74.177,74.179   c0,77.822,95.088,147.437,148.356,205.331l6.689-39.901l-44.474-30.699l27.313-7.493l-38.915-32.631l58.494-56.56l-30.455-43.508   L238.848,142.991z"/>
           </div>
 
           <div>
