--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </svg>
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
           <!-- Uploaded to SVGRepo https://www.svgrepo.com -->
-          <title>ic_fluent_live_24_filled</title>
+          <title>live</title>
           <desc>Created with Sketch.</desc>
           <g id="🔍-Product-Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="ic_fluent_live_24_filled" fill="#212121" fill-rule="nonzero">
