--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="profile">
           
-          
+          <title>upload</title>
           <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
             <g>
                 <path fill="none" d="M0 0h24v24H0z"/>
