--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               
               
             </div> 
-          <p>RATE-ME</p>
+          <p> <img src="Rate-me.png" alt="Italian Trulli"></p>
         </div>
 
         <div class="search">
