--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               
               
             </div> 
-          <p> <img src="unnamed.png" alt="Italian Trulli"></p>
+          <p> <img src="unnamed.png" alt="Italian Trulli" width="100"></p>
         </div>
 
         <div class="search">
