--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <div>
             <img src="cl.png" alt="Italian Trulli" width="40px">
-              
+            <title>profile</title>
               
             </div> 
 
