--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="left-sidebar">
 
           <div>
-            <img src="cl.png" alt="Italian Trulli" width="40px">
-            <title>profile</title>
+            <img src="cl.png" alt="Italian Trulli" width="40px" <title>profile</title>>
+            
               
             </div> 
 
