--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
         <div class="left-sidebar">
 
           <div>
-            <img src="cl.png" alt="Italian Trulli" width="40px" <title>profile</title>>
-            
+            <img src="cl.png" alt="Italian Trulli" width="40px" >
+            <svg>
+              <title>profile</title>
+            </svg>
               
             </div> 
 
