--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
         <div class="left-sidebar">
 
-          <div>
+          <div><svg>
             <img src="cl.png" alt="Italian Trulli" width="40px" >
-            <svg>
+            
               <title>profile</title>
             </svg>
               
