--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </header>
         
         <main>
-          <a href="https://google.com" class="card">
+          <a href="cl.png" class="card">
               <div class="inner">
                 <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
                 <time class="subtitle">03. März 2021<time>
