--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
         </header>
         
         <main>
-          <a <img src="cl.png" alt="Italian Trulli" width="40px" > class="card">
+          <a href="https://google.com" class="card">
+            <img src="cl.png">
               <div class="inner">
                 <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
                 <time class="subtitle">03. März 2021<time>
