--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         
         <main>
           <a href="https://google.com" class="card">
-            <img src="cl.png">
+            <img src="cl.png" width="200">
               <div class="inner">
                 <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
                 <time class="subtitle">03. März 2021<time>
