--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </svg>
         </div>
 
-        <div class="profile">
+        <div >
           
           
           <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
