--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <div>
             <img src="Rate-me.png" alt="Italian Trulli" width="80px">
               
-              
+              <a href="./login.html">Login</a>
             </div> 
           <p> <img src="unnamed.png" alt="Italian Trulli" width="200"></p>
         </div>
