--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style1.css">
 <div class="form">
     <div class="title">Welcome</div>
     <div class="subtitle">Let's create your account!</div>
