--- a/login.html
+++ b/login.html
@@ -17,5 +17,15 @@
       <div class="cut cut-short"></div>
       <label for="email" class="placeholder">Email</>
     </div>
+    <div class="input-container ic2">
+        <input id="email" class="input" type="text" placeholder=" " />
+        <div class="cut cut-short"></div>
+        <label for="mobilenumber" class="placeholder">Mobilenumber</>
+      </div>
+      <div class="input-container ic2">
+        <input id="email" class="input" type="text" placeholder=" " />
+        <div class="cut cut-short"></div>
+        <label for="gender" class="placeholder">Gender</>
+      </div>
     <button type="text" class="submit">submit</button>
   </div>
