--- a/login.html
+++ b/login.html
@@ -18,12 +18,12 @@
       <label for="email" class="placeholder">Email</>
     </div>
     <div class="input-container ic2">
-        <input id="email" class="input" type="text" placeholder=" " />
+        <input id="mobilenumber" class="input" type="text" placeholder=" " />
         <div class="cut cut-short"></div>
         <label for="mobilenumber" class="placeholder">Mobilenumber</>
       </div>
       <div class="input-container ic2">
-        <input id="email" class="input" type="text" placeholder=" " />
+        <input id="gender" class="input" type="text" placeholder=" " />
         <div class="cut cut-short"></div>
         <label for="gender" class="placeholder">Gender</>
       </div>
